Correct Z-index of modal.

--- a/portfolio/src/components/components/services/services.css
+++ b/portfolio/src/components/components/services/services.css
@@ -49,7 +49,7 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: var(--z-modal);
+    z-index: var(--z-model);
     display: flex;
     justify-content: center;
     align-items: center;
